DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/APTS_ContractualPriceMultiplier__c.object-meta.xml
<CustomObject>
    <description>De-normalized table  to consolidate all the contractual prices and multipliers from SAP tables for quoting</description>
    <label>Contractual Price Multiplier</label>
    <nameField>
        <displayFormat>CPM-{0000000}</displayFormat>
        <label>Contractual Price Multiplier ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractual Price Multiplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>