DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>APTS_Batch_Status__c</fullName>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>