DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>APTS_Contract_Price__c</fullName>
    <description>Contractual price value from SAP</description>
    <inlineHelpText>Contractual price value from SAP</inlineHelpText>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>