DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Discount_Priority__c.field-meta.xml
<CustomField>
    <fullName>APTS_Discount_Priority__c</fullName>
    <description>P1 = highest priority and P6 = lowest priority when evaluating contractual pricing logic</description>
    <inlineHelpText>P1 = highest priority and P6 = lowest priority when evaluating contractual pricing logic</inlineHelpText>
    <label>Discount Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>