DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Mat_Grp_1_CIT__c.field-meta.xml
<CustomField>
    <fullName>APTS_Mat_Grp_1_CIT__c</fullName>
    <description>Material Group 1/CIT value from SAP</description>
    <inlineHelpText>Material Group 1/CIT value from SAP</inlineHelpText>
    <label>Material Group 1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>