DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Mat_Grp_2_Catlg__c.field-meta.xml
<CustomField>
    <fullName>APTS_Mat_Grp_2_Catlg__c</fullName>
    <description>Material Group 2/Product Catalog value from SAP</description>
    <inlineHelpText>Material Group 2/Product Catalog value from SAP</inlineHelpText>
    <label>Material Group 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>