DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Mat_Grp_3_Catgr_CD__c.field-meta.xml
<CustomField>
    <fullName>APTS_Mat_Grp_3_Catgr_CD__c</fullName>
    <description>Material Group 3/Product Category CD value from SAP</description>
    <inlineHelpText>Material Group 3/Product Category CD value from SAP</inlineHelpText>
    <label>Material Group 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>