DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>APTS_Multiplier__c</fullName>
    <description>Contractual multiplier value from SAP</description>
    <inlineHelpText>Contractual multiplier value from SAP</inlineHelpText>
    <label>Multiplier</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>