DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Multiplier_Price__c.field-meta.xml
<CustomField>
    <fullName>APTS_Multiplier_Price__c</fullName>
    <description>Multiplier or Net Price from SAP table - KONP</description>
    <inlineHelpText>Multiplier or Net Price from SAP table - KONP</inlineHelpText>
    <label>Multiplier/Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>