DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_NetVsMultiplier_Sequence__c.field-meta.xml
<CustomField>
    <fullName>APTS_NetVsMultiplier_Sequence__c</fullName>
    <formula>IF( AND(
NOT ISBLANK(APTS_Sold_To_Account__c),
NOT ISBLANK(APTS_PriceList__c),
NOT ISBLANK(APTS_Valid_From_Date__c),
NOT ISBLANK(APTS_Valid_Until_Date__c),
NOT(APTS_Invalid__c))
,

IF( AND(
NOT ISBLANK(APTS_Ship_To_Account__c), 
NOT ISBLANK(APTS_Material_Number__c),
NOT ISBLANK(APTS_Product_Name__c),
NOT ISBLANK(APTS_Contract_Price__c))
, 1, 

IF( AND(
ISBLANK(APTS_Ship_To_Account__c),
NOT ISBLANK(APTS_Material_Number__c),
NOT ISBLANK(APTS_Product_Name__c),
NOT ISBLANK(APTS_Contract_Price__c))
,2,

IF( AND(
NOT ISBLANK(APTS_Ship_To_Account__c), 
NOT ISBLANK(APTS_Material_Number__c),
NOT ISBLANK(APTS_Product_Name__c),
NOT ISBLANK(APTS_Multiplier__c))
,3,

IF( AND(
ISBLANK(APTS_Ship_To_Account__c),
NOT ISBLANK(APTS_Material_Number__c),
NOT ISBLANK(APTS_Product_Name__c),
NOT ISBLANK(APTS_Multiplier__c))
,4,

IF( AND(
NOT ISBLANK(APTS_Ship_To_Account__c), 
NOT ISBLANK(APTS_Mat_Grp_3_Catgr_CD__c),
NOT ISBLANK(APTS_Multiplier__c))
,5,

IF( AND(
NOT ISBLANK(APTS_Ship_To_Account__c), 
NOT ISBLANK(APTS_Mat_Grp_1_CIT__c),
NOT ISBLANK(APTS_Mat_Grp_2_Catlg__c),
NOT ISBLANK(APTS_Multiplier__c))
,6,0

)))))),0)</formula>
    <label>NetVsMultiplier Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>