DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_PriceList__c.field-meta.xml
<CustomField>
    <fullName>APTS_PriceList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Price List object to capture price list</description>
    <inlineHelpText>Reference to the Price List object to capture price list</inlineHelpText>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Contractual Price Multiplier</relationshipLabel>
    <relationshipName>Contractual_Price_Multiplier</relationshipName>
    <type>Lookup</type>
</CustomField>