DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Product object to capture Product record</description>
    <inlineHelpText>Reference to the Product object to capture Product record</inlineHelpText>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contractual Price Multiplier</relationshipLabel>
    <relationshipName>Contractual_Price_Multiplier</relationshipName>
    <type>Lookup</type>
</CustomField>