DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_SAP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>APTS_SAP_External_ID__c</fullName>
    <description>SAP External ID from SAP for record mapping</description>
    <inlineHelpText>SAP External ID from SAP for record mapping</inlineHelpText>
    <label>SAP External ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>