DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>APTS_Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Account object to capture Ship-To</description>
    <inlineHelpText>Reference to the Account object to capture Ship-To</inlineHelpText>
    <label>Ship-To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contractual Price Multiplier (Ship-To Account)</relationshipLabel>
    <relationshipName>Contractual_Price_Multiplier1</relationshipName>
    <type>Lookup</type>
</CustomField>