DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Ship_To_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_Ship_To_Acct_Number__c</fullName>
    <description>Ship-To Account Number</description>
    <inlineHelpText>Ship-To Account Number</inlineHelpText>
    <label>Ship-To Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>