DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>APTS_Sold_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Account object to capture Sold-To</description>
    <inlineHelpText>Reference to the Account object to capture Sold-To</inlineHelpText>
    <label>Sold-To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contractual Price Multiplier</relationshipLabel>
    <relationshipName>Contractual_Price_Multiplier</relationshipName>
    <type>Lookup</type>
</CustomField>