DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Sold_To_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_Sold_To_Acct_Number__c</fullName>
    <description>Sold-To Account Number</description>
    <inlineHelpText>Sold-To Account Number</inlineHelpText>
    <label>Sold-To Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>