DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Symbol_Indicator_SAP__c.field-meta.xml
<CustomField>
    <fullName>APTS_Symbol_Indicator_SAP__c</fullName>
    <description>Currency or Percentage from SAP table - KONP</description>
    <inlineHelpText>Currency or Percentage from SAP table - KONP</inlineHelpText>
    <label>Symbol Indicator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>