DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Valid_From_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_Valid_From_Date__c</fullName>
    <description>Valid From Date for the Contractual Price/Multiplier</description>
    <inlineHelpText>Valid From Date for the Contractual Price/Multiplier</inlineHelpText>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>