DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/fields/APTS_Valid_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_Valid_Until_Date__c</fullName>
    <description>Valid Until Date for the Contractual Price/Multiplier</description>
    <inlineHelpText>Valid Until Date for the Contractual Price/Multiplier</inlineHelpText>
    <label>Valid Until Date</label>
    <type>Date</type>
</CustomField>