DFfullcopybackup/force-app/main/default/objects/APTS_ContractualPriceMultiplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APTS_Sold_To_Account__c</columns>
    <columns>APTS_Ship_To_Account__c</columns>
    <columns>APTS_PriceList__c</columns>
    <columns>APTS_Valid_From_Date__c</columns>
    <columns>APTS_Valid_Until_Date__c</columns>
    <columns>APTS_Invalid__c</columns>
    <columns>APTS_NetVsMultiplier_Sequence__c</columns>
    <columns>APTS_Material_Number__c</columns>
    <columns>APTS_Mat_Grp_1_CIT__c</columns>
    <columns>APTS_Mat_Grp_2_Catlg__c</columns>
    <columns>APTS_Mat_Grp_3_Catgr_CD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APTS_Sold_To_Account__c</field>
        <operation>contains</operation>
        <value>winston</value>
    </filters>
    <filters>
        <field>APTS_Mat_Grp_1_CIT__c</field>
        <operation>equals</operation>
        <value>C</value>
    </filters>
    <filters>
        <field>APTS_Mat_Grp_2_Catlg__c</field>
        <operation>equals</operation>
        <value>CBV</value>
    </filters>
    <filters>
        <field>APTS_Material_Number__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>